# SEO_pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  config.yaml  config.yaml.example  lance_cleanup.py  main.py  pyproject.toml
.claude/skills/seo-optimize/: SKILL.md
.claude/skills/seo-optimize/examples/: sample-output.json
.claude/skills/seo-optimize/scripts/: postprocess.py  prepare_contexts.py
.claude/skills/seo-optimize/templates/: rewrite-prompt.md
docs/superpowers/plans/: 2026-03-16-api-rewrite-pipeline.md
docs/superpowers/specs/: 2026-03-16-api-rewrite-pipeline-design.md
scripts/: probe_batch_update.py  run_pipeline_scheduled.sh  upload_optimized.py  upload_optimized.py.example
steps/: _classify.py  _lance.py  analyze.py  audit.py  crawl.py  evaluate.py  fetch_gsc.py  optimize.py  rank.py
templates/: rewrite-prompt.md
tests/: conftest.py  test_audit.py  test_classify.py  test_crawl.py  test_evaluate.py  test_fetch_gsc.py  test_lance.py  test_optimize.py  test_rank.py  test_upload.py
